<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="25dp"
    >
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nav_home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_home"
        android:backgroundTint="@color/dark_cyan"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_continue_nafter_reading_nthe_instruction"
        android:textSize="30sp"
        android:textColor="@color/dark_cyan"/>
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_cyan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_the_form_given_in_the_next_page_appropriately"
            android:textSize="15sp"
         android:layout_marginStart="70dp"
            android:textColor="@color/dark_cyan"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_cyan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_confirm_button_onec_all_details_of_passanger_are_added"
            android:textSize="15sp"
            android:layout_marginStart="70dp"
            android:textColor="@color/dark_cyan"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_cyan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respective_qr_code_will_be_generated_save_the_qr"
            android:textSize="15sp"
            android:layout_marginStart="70dp"
            android:textColor="@color/dark_cyan"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_4"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_cyan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_more_passenger_if_needed"
            android:textSize="15sp"
            android:layout_marginStart="70dp"
            android:textColor="@color/dark_cyan"/>
    </RelativeLayout>
</LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_margin="35dp"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        android:background="@color/black"
        android:backgroundTint="@drawable/round_btn_selector">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/continue_inst"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@drawable/text_selector"
             android:layout_centerVertical="true"
             android:layout_marginStart="30dp"
             />
         <TextView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/ic_back"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="35dp"
             android:backgroundTint="@drawable/text_selector"/>
     </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>