<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_margin="25sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/dark_cyan"
            android:layout_marginBottom="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="89dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:src="@drawable/khaliadmi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text=""
                android:id="@+id/Pro_Name"
                android:textSize="18dp"
                android:textColor="@color/dark_cyan"
                android:textAlignment="center"
                android:textStyle="bold" />
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/text_name"-->
<!--            android:text="Name :"-->
<!--            android:textSize="20dp"-->
<!--            android:layout_marginTop="20dp"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/Pro_Name"-->
<!--                android:text=""-->
<!--                android:textSize="20dp"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:layout_marginTop="20dp"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Pro_Email"
                android:textSize="18dp"
                android:textColor="@color/dark_cyan"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Pro_number"
                android:text=""
                android:textSize="18dp"
                android:textColor="@color/dark_cyan"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Pro_gender"
                android:text=""
                android:textSize="18dp"  android:textColor="@color/dark_cyan"

                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_1"
                android:textSize="18dp"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Pro_dob"
                android:text=""
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/dark_cyan"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city1"
                android:textColor="@color/dark_cyan"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Pro_city"
                android:text=""
                android:textSize="18dp"
                android:textColor="@color/dark_cyan"

                android:layout_marginLeft="10dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/dark_cyan"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:id="@+id/edit_btn_pro"/>

            <androidx.legacy.widget.Space
                android:layout_width="20dp"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:backgroundTint="@color/dark_cyan"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:id="@+id/logOut_btn_pro"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>