<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity"
    android:background="#FFFFFF"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:textColor="@color/dark_cyan"
            android:textStyle="bold"
            android:layout_marginTop="70dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_sent"
            android:textSize="20sp"
            android:textColor="@color/dark_cyan"
            android:layout_marginTop="30dp"
android:layout_gravity="center"/>
        <com.chaos.view.PinView
            android:id="@+id/id_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            android:shadowColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:itemBackground="#F4F6F9"
            android:cursorVisible="true"
            app:lineColor="@color/dark_cyan"
            android:elevation="20dp"
            android:textColor="#1F1F1F"
            android:inputType="number"
            app:hideLineWhenFilled="true"
            style="@style/PinWidget.PinView"
            app:itemRadius="5dp"/>

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_margin="35dp"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        app:cardCornerRadius="30dp"
        android:background="@color/black"
        android:backgroundTint="@drawable/round_btn_selector">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@drawable/text_selector"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                />
            <TextView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="35dp"
                android:backgroundTint="@drawable/text_selector"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>